# copy-n-launch-xlsx

./: .env  .gitignore  Dockerfile.multi-dev  LICENSE  README.md  build_executable.py  build_executable.py   build_pyz.py  io.github.city_of_memphis_wastewater.copy_n_launch_xlsx.desktop  io.github.city_of_memphis_wastewater.copy_n_launch_xlsx.metainfo.xml  io.github.city_of_memphis_wastewater.copy_n_launch_xlsx.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  deb.yml  docker.yml  flatpak.yml  publish.yml  test.yml
assets/xlsx/: daily_blank.xlsx  daily_blank.xlsx:Zone.Identifier  daily_blank.xlsx:sec.endpointdlp
build_utils/: build_utils.py  linux_app_image.py
deb/: control.in  copy-n-launch-xlsx.desktop  launcher.sh
docs/: CHANGELOG.md
pyinstaller_hooks/: hook-copy_n_launch_xlsx.py
src/copy_n_launch_xlsx/: VERSION  __init__.py  __main__.py  _version.py  cli.py  context.py  core.py  datacopy.py  environment.py  external_web_launch.py  gui.py  helpers.py  logging_setup.py  paths.py  splash.py  tk_utils.py  webapp.py
src/copy_n_launch_xlsx/data/icons/: max-black.svg:Zone.Identifier  max-green.icns
src/copy_n_launch_xlsx/data/themes/forest/: forest-dark.tcl  forest-light.tcl
src/copy_n_launch_xlsx/data/xlsx/: Copy of daily_blank.xlsx  daily_blank.xlsx  ~$daily_blank.xlsx
test/: test_get_target_copy_dir.py
