[project]
name = "copy-n-launch-xlsx"
#version = "0.1.0"
dynamic = ["version"]
description = "Stable spreadsheet copy, renaming, and dating, for municipal wastewater operator daily data entry."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyhabitat>=1.3.2",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "click>=8.1.8",
    "openpyxl>=3.1.5",
    "dworshak-config>=0.2.8",
    "dworshak-env>=0.1.8",
    "typer-helptree>=0.2.10.5",
]

#license = "MIT"
#license-files = ["LICENSE"]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    #"Intended Audience :: Developers", # library and documentation
    #"Environment :: Console",
    #"Typing :: Typed",
    #"Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
]

authors = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" },
]
maintainers = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" },
]

keywords = [
    "data entry",
    "xlsx"
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/copy-n-launch-xlsx"
Repository = "https://github.com/city-of-memphis-wastewater/copy-n-launch-xlsx"
Issues = "https://github.com/city-of-memphis-wastewater/copy-n-launch-xlsx/issues"
Changelog = "https://raw.githubusercontent.com/city-of-memphis-wastewater/copy-n-launch-xlsx/main/docs/CHANGELOG.md"

[project.scripts]
copy-n-launch-xlsx = "copy_n_launch_xlsx.__main__:app"
cnlx = "copy_n_launch_xlsx.__main__:app"

#[project.optional-dependencies]

# add with `uv sync --group dev`
[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyinstaller>=6.21.0", 
    "shiv>=1.0.8",
    #"ruff>=0.7.0 ; platform_system == 'Linux' and platform_machine != 'aarch64'", # to avoid on termux
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "src/copy_n_launch_xlsx/VERSION"}

# --- Add this section to include your asset directories ---
[tool.setuptools.package-data]
copy_n_launch_xlsx = ["data/**/*"]
